# firmware_power_sup

./: .clang-format  .gitignore  .project  README.md
jenkins/: Dockerfile  Jenkinsfile  README.md  format-check.sh
jenkins/format-testing/: README.md  format-test.sh  formatted.cc  unformatted.cc
lights/: CMakeLists.txt  README.md
lights/inc/: app.h  light.h  main.h  pwm_driver.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
lights/src/: app.cc  light.cc  main.cc  pwm_driver.cc  stm32g4xx_it.cc
src/: CMakeLists.txt
src/boards/: CMakeLists.txt
src/boards/boost/: CMakeLists.txt
src/boards/boost/inc/: adc.h  enable1.h  i2c.h  led_breath.h  led_pwm.h  main.h  mosfet_pwm.h  spi.h  stm32l4xx_hal_conf.h
src/boards/boost/src/: adc.c  enable1.c  i2c.c  led_breath.c  led_pwm.c  main.c  main.cc  mosfet_pwm.c  spi.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  stm32l4xx_it.cc
src/cangen/: CMakeLists.txt  can_parser.py  hitl_msg_gen.py  skylab2.py  yaml2json.py
src/cmake/: CMSIS.cmake  CMSIS_DSP.cmake  FreeRTOS.cmake  SEGGER.cmake  STM32_HAL.cmake  UMNSVP.cmake  fatfs.cmake  readme.txt  stm32_compile_options.cmake  stm32_gcc.cmake  utils.cmake
src/libraries/: CMakeLists.txt
src/libraries/CMSIS/Device/ST/STM32G4xx/Source/Templates/gcc/: startup_stm32g473xx.s
src/libraries/FreeRTOS/: svp_freertos_guide.txt
src/libraries/SEGGER/: SEGGER_RTT.h  SEGGER_SYSVIEW_Config_NoOS.c
src/libraries/UMNSVP/: application_base.cc  application_base.h  battery_charging_limits.h  baud_rate.h  bxcan.cc  bxcan.h  can_driver_base.h  can_packet.cc  can_packet.h  circular_buffer.h  dip_switch.cc  dip_switch.h  fdcan.cc  fdcan.h  hal.h  time_point.h  timer.h  triple_buffer.h  uid.cc  uid.h
src/libraries/fatfs/source/: diskio.h  ff.c  ff.h  ffconf.h  ffsystem.c  ffunicode.c
src/libraries/hal/f4/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c
src/libraries/hal/g4/: STM32G473VETX_FLASH.ld
src/libraries/hal/l4/: STM32L496RG_FLASH.ld
src/libraries/hal/l4/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal_tim_ex.h
src/libraries/hal/l4/STM32L4xx_HAL_Driver/Src/: stm32l4xx_ll_sdmmc.c
src/libraries/hal/l4/STM32L4xx_HAL_Driver/Src/Legacy/: stm32l4xx_hal_sd.c
src/libraries/skylab2/inc/: skylab2_can_base.h
src/libraries/skylab2/src/: skylab2_can_base.cc
tools/can_packet_parser/: README.md  can_packet_codec.py  interface_digi_xbee.py  packet.py  parse_can_log.py  requirements.txt  scrappy.py  sd_card_parsing_tools.py  server.py  xbeecan.py  xbeedump.py  xbeefind.py  xbeesend.py
tools/can_packet_parser/www/: index.html  plot.js  plots.html  stream.js
tools/hitl_testing/: README.md  requirements.txt  simulate.py  simulate_bus.py
tools/hitl_testing/boards/: abstract_board.py  bms.py  center_console.py  charger.py  flight_computer.py  photon3.py  steering.py  telemetry.py  vision.py  wavesculptor22.py
tools/hitl_testing/messages/: abstract_message.py  bms.py  boards.py  car_control.py  charger.py  lights.py  steering.py  thunderstruck.py  trackers.py  tritium.py  user.py  wavesculptor.py
tools/hitl_testing/tests/: test_vision.py
tools/xbee_python/: main.py  xbee.py
